--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "eslint": "8.10.0",
