--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "material-table": "^1.69.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
